2007-11-14       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  corrected urls and last edit.
	* gm2/gm2-libs.texi:  recreated.

2007-11-10       Gaius Mulley <gaius@gnu.org>

	* gm2/m2.flex:  added explicit cast.
	* gm2/Make-lang.in:  now build h2def during stage2.
	* gm2/gm2/c.flex:  modified so that it ignores tabs.
	* gm2/bnf/h2def.bnf:  many bugfixes, still broken though.
	* gm2/gm2-compiler/CLexBuf.mod:  improved Debugging support.
	* gm2/gm2-compiler/gm2lcc.mod:  refactored comment handling
	  code to use the RemoveComment, RemoveWhiteSuffix and
          RemoveWhitePrefix procedures in DynamicStrings module.
	* gm2/gm2-compiler/gm2lgen.mod:  likewise handle comments.
	* gm2/gm2-libs/DynamicStrings.def:  export 
          RemoveWhitePrefix, RemoveWhitePostfix, RemoveComment.
	* gm2/gm2-libs/DynamicStrings.mod:  implement above.
	
2007-11-07       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  updated version to 0.63
	* gm2/gm2.texi:  updated version to 0.63 and updated
	  unbounded-by-reference documentation.
	* gm2/gm2-compiler/M2GenGCC.mod:  modified optimization
	  of unbounded addresses to test the memory range of
	  each unbounded parameter against a type compatible
	  var parameter, any overlapping addresses results in
	  a alloca and memcpy of the non var unbounded array.

2007-11-02       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  completed the further
	  optimization of unbounded addresses.  It checks to
	  see if the contents of a type compatible unbounded
	  ARRAY matches the contents of a VAR parameter.
	  It checks against any VAR parameter (not just
	  unbounded VAR parameters - consider ARRAY OF BYTE).
	* gm2/gm2.texi:  documented the implementation of
	  the -funbounded-by-reference optimization flag
	  giving examples.

2007-10-30       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  fixed @xref punctuation requirement.
	* gm2/gm2-compiler/M2GenGCC.mod:  fixed unbounded-by-reference